# near-account-id-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  dep-reqs.yml  release-plz.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: borsh.rs  serde.rs
src/: account_id.rs  account_id_ref.rs  arbitrary.rs  borsh.rs  errors.rs  into_account_id.rs  lib.rs  schemars_exports.rs  serde.rs  test_data.rs  validation.rs
src/tests/wrong_near_handlers/: errors.rs  errors.stderr
