[package]
name = "near-account-id"
version = "1.0.0-alpha.3"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
description = "This crate contains the Account ID primitive and its validation facilities"
repository = "https://github.com/near/near-account-id"
license = "MIT OR Apache-2.0"
publish = true

[features]
abi = ["borsh/unstable__schema", "schemars"]
# This feature was introduced for legacy reasons for nearcore, and MUST be avoided
# https://github.com/near/nearcore/pull/4621#issuecomment-892099860
internal_unstable = []
default = []

[dependencies]
arbitrary = {  version = "1", features = ["derive"] , optional = true }
borsh = { version = "1.0.0", features = ["rc"], optional = true }
serde = { version = "1.0.119", features = ["alloc", "derive", "rc"], optional = true }
schemars = { version = "0.8", optional = true }

[dev-dependencies]
bolero = ">=0.8.0, <0.10.0"
serde_json = "1.0.25"

# We don't use these directly - we just need to tighten the version requirements to block dependency resolution
# from choosing old versions that cause compilation errors. These problems are usually detected by the
# "minimal-deps" CI job.
anyhow = "1.0.14"
backtrace = "0.3.13"
lazy_static = "1.0.2"
