[package]
name = "near-account-id"
version = "1.1.2"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
description = "This crate contains the Account ID primitive and its validation facilities"
repository = "https://github.com/near/near-account-id"
license = "MIT OR Apache-2.0"
publish = true

[features]
all-except-schemars-v1 = ["abi-with-schemars-v0_8", "internal_unstable", "default", "arbitrary", "borsh", "serde"]
all-except-schemars-v0_8 = ["abi-with-schemars-v1", "internal_unstable", "default", "arbitrary", "borsh", "serde"]
abi = ["abi-with-schemars-v0_8"] # deprecated
abi-alpha = ["abi-with-schemars-v1"] # deprecated
abi-with-schemars-v1 = ["borsh/unstable__schema", "schemars-v1"]
abi-with-schemars-v0_8 = ["borsh/unstable__schema", "schemars-v0_8"]
# This feature was introduced for legacy reasons for nearcore, and MUST be avoided
# https://github.com/near/nearcore/pull/4621#issuecomment-892099860
internal_unstable = []
default = []
schemars = []
schemars-v1 = ["schemars", "dep:schemars-v1"]
schemars-v0_8 = ["schemars", "dep:schemars-v0_8"] 
schemars-alpha = ["schemars-v1"]  # deprecated
schemars-stable = ["schemars-v0_8"]  # deprecated 

[dependencies]
arbitrary = {  version = "1", features = ["derive"] , optional = true }
borsh = { version = "1.0.0", optional = true }
serde = { version = "1.0.119", features = ["alloc", "derive", "rc"], optional = true }
schemars-v1 = { version = "1.0.0-alpha.17", optional = true, package = "schemars" }
schemars-v0_8 = { version = "0.8.22", optional = true, package = "schemars" }

[dev-dependencies]
bolero = ">=0.8.0, <0.10.0"
serde_json = "1.0.25"

# We don't use these directly - we just need to tighten the version requirements to block dependency resolution
# from choosing old versions that cause compilation errors. These problems are usually detected by the
# "minimal-deps" CI job.
anyhow = "1.0.14"
backtrace = "0.3.13"
lazy_static = "1.0.2"
