[package]
name = "near-account-id"
version = "2.4.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
description = "This crate contains the Account ID primitive and its validation facilities"
repository = "https://github.com/near/near-account-id"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
publish = true

[features]
abi = ["borsh/unstable__schema", "schemars-v0_8"]
arbitrary = ["dep:arbitrary", "dep:arbitrary_with", "dep:hex"]
borsh = ["dep:borsh"]
# This feature was introduced for legacy reasons for nearcore, and MUST be avoided
# https://github.com/near/nearcore/pull/4621#issuecomment-892099860
internal_unstable = []
schemars = ["schemars-v0_8"]
schemars-v1 = ["dep:schemars-v1"]
schemars-v0_8 = ["dep:schemars-v0_8"]
schemars-alpha = ["schemars-v1"]      # deprecated
schemars-stable = ["schemars-v0_8"]   # deprecated 
serde = ["dep:serde"]

[dependencies]
arbitrary = { version = "1.3", optional = true }
arbitrary_with = { version = "0.3.2", optional = true }
borsh = { version = "1.0.0", optional = true }
hex = { version = "0.4", optional = true }
serde = { version = "1.0.119", features = [
    "alloc",
    "derive",
    "rc",
], optional = true }
schemars-v1 = { version = "1.0.0-alpha.17", optional = true, package = "schemars" }
schemars-v0_8 = { version = "0.8.22", optional = true, package = "schemars" }

[dev-dependencies]
bolero = ">=0.8.0, <0.10.0"
serde_json = "1.0.25"

# We don't use these directly - we just need to tighten the version requirements to block dependency resolution
# from choosing old versions that cause compilation errors. These problems are usually detected by the
# "minimal-deps" CI job.
anyhow = "1.0.14"
backtrace = "0.3.13"
lazy_static = "1.0.2"
